Stuck on value traits not supporting equality